--- a/package.json
+++ b/package.json
@@ -1,26 +1,24 @@
 {
-  "name": "typescript-decorators",
-  "version": "0.1.0",
-  "description": "",
-  "main": "build/src/index.js",
-  "types": "build/src/index.d.ts",
-  "files": [
-    "build/src"
-  ],
-  "license": "Apache-2.0",
-  "keywords": [],
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "check": "gts check",
-    "clean": "gts clean",
-    "compile": "tsc -p .",
-    "fix": "gts fix",
-    "prepare": "npm run compile",
-    "pretest": "npm run compile",
-    "posttest": "npm run check"
-  },
-  "devDependencies": {
-    "gts": "^0.9.0",
-    "typescript": "~3.1.0"
-  }
+    "name": "typescript-decorator",
+    "version": "0.0.1",
+    "description": "",
+    "scripts": {
+        "prestart": "yarn",
+        "start": "webpack --watch",
+        "dev-server": "webpack-dev-server --hotOnly"
+    },
+    "keywords": [],
+    "author": "Mohan Ram",
+    "license": "ISC",
+    "devDependencies": {
+        "@webpack-cli/serve": "^0.1.2",
+        "ts-loader": "^5.3.1",
+        "typescript": "^3.2.2",
+        "webpack": "^4.20.2",
+        "webpack-cli": "^3.1.2",
+        "webpack-dev-server": "^3.1.10"
+    },
+    "dependencies": {
+        "reflect-metadata": "^0.1.12"
+    }
 }
